--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,18 @@
 @charset "UTF-8";
+.toplinkzone {
+  background-color: #374357;
+  width: 100%;
+  height: 28px;
+  font-size: 13px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 9999;
+  visibility: visible;
+  display: inline-block;
+  margin: 0;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -6,9 +20,22 @@
           box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: 'Noto Sans TC', sans-serif, "Microsoft JhengHei", "微軟正黑體";
   font-weight: 400;
+  font-size: 16px;
+  line-height: 26px;
+}
+
+@media (min-width: 992px) {
+  body {
+    font-size: 18px;
+    line-height: 28px;
+  }
 }
 
 h1, h2, h3, h4, h5, h6, p {
@@ -29,7 +56,7 @@ img {
   border-radius: 10px;
 }
 
-@media (min-width: 992px) {
+@media (min-width: 768px) {
   .btn-003158 {
     font-size: 20px;
     padding: 15px 50px;
@@ -51,20 +78,6 @@ img {
   border-color: #fed954;
   -webkit-box-shadow: 0 0 0 0.2rem rgba(38, 143, 255, 0.1);
           box-shadow: 0 0 0 0.2rem rgba(38, 143, 255, 0.1);
-}
-
-.toplinkzone {
-  background-color: #374357;
-  width: 100%;
-  height: 28px;
-  font-size: 13px;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 9999;
-  visibility: visible;
-  display: inline-block;
-  margin: 0;
 }
 
 .card_jobs_btn {
@@ -114,7 +127,7 @@ section.section_info article.card_jobs_box {
   }
 }
 
-section.section_info article.card_jobs_box header.card_jobs_title {
+section.section_info article.card_jobs_box .card_jobs_title {
   margin: -15px auto 0;
   padding: 12px 0;
   width: 60%;
@@ -124,19 +137,19 @@ section.section_info article.card_jobs_box header.card_jobs_title {
 }
 
 @media (min-width: 768px) {
-  section.section_info article.card_jobs_box header.card_jobs_title {
-    width: 53%;
+  section.section_info article.card_jobs_box .card_jobs_title {
+    width: 80%;
   }
 }
 
-section.section_info article.card_jobs_box header.card_jobs_title h2 {
+section.section_info article.card_jobs_box h2 {
   font-size: 22px;
   font-weight: 700;
   color: #fff;
 }
 
 @media (min-width: 992px) {
-  section.section_info article.card_jobs_box header.card_jobs_title h2 {
+  section.section_info article.card_jobs_box h2 {
     font-size: 34px;
     font-weight: 700;
   }
@@ -171,21 +184,16 @@ section.section_info article.card_jobs_box a {
 }
 
 section.section_info p {
-  margin-top: 40px;
+  margin-top: 28px;
   text-align: justify;
-  font-size: 16px;
-  line-height: 26px;
-}
-
-@media (min-width: 992px) {
-  section.section_info p {
-    font-size: 18px;
-    line-height: 30px;
-  }
 }
 
 section.section_info p span {
   color: #0088cc;
+}
+
+section.section_info p:nth-child(1) {
+  margin-top: 40px;
 }
 
 @media (min-width: 1200px) {
@@ -216,25 +224,24 @@ section.section_info p span {
   }
 }
 
-section.section_news {
-  background: #f5f5f5;
+.same_section_set {
   padding: 40px 0;
 }
 
 @media (min-width: 992px) {
-  section.section_news {
+  .same_section_set {
     padding: 60px 0  80px;
   }
 }
 
-section.section_news h2 {
+.same_section_set h2 {
   text-align: center;
   color: #003158;
   font-weight: 700;
   line-height: 40px;
 }
 
-section.section_news h2::after {
+.same_section_set h2::after {
   content: '';
   display: block;
   margin: 10px auto 0;
@@ -245,13 +252,84 @@ section.section_news h2::after {
 }
 
 @media (min-width: 992px) {
-  section.section_news h2::after {
+  .same_section_set h2::after {
     margin: 15px auto 0;
   }
 }
 
-section.section_news .card_news_content {
+.same_section_set .card_content {
   background: #fff;
+  margin: 20px 0;
+  padding: 20px 15px;
+  border-radius: 4px;
+  -webkit-box-shadow: 0 7px 15px rgba(0, 0, 0, 0.1);
+          box-shadow: 0 7px 15px rgba(0, 0, 0, 0.1);
+}
+
+@media (min-width: 768px) {
+  .same_section_set .card_content {
+    margin: 35px 0;
+    padding: 50px 60px;
+  }
+}
+
+@media (min-width: 992px) {
+  .same_section_set .card_content {
+    margin: 35px 0;
+    padding: 50px 60px;
+  }
+}
+
+section.section_benefits {
+  background: #f5f5f5;
+}
+
+section.section_benefits ol {
+  text-align: left;
+}
+
+section.section_benefits ol li {
+  list-style: none;
+  padding: 3px 0;
+}
+
+section.section_benefits ol li b {
+  color: #003158;
+}
+
+section.section_recruit {
+  position: relative;
+}
+
+@media (min-width: 1200px) {
+  section.section_recruit .bg_left {
+    position: absolute;
+    background: url(../img/bg_right.svg) no-repeat;
+    background-position: 0 bottom;
+    background-size: 50%;
+    top: 0;
+    left: 0;
+    right: 50%;
+    bottom: 0;
+    z-index: -1;
+  }
+}
+
+@media (min-width: 1200px) {
+  section.section_recruit .bg_right {
+    position: absolute;
+    background: url(../img/bg_left.svg) no-repeat;
+    background-position: 100% top;
+    background-size: 50%;
+    top: 0;
+    left: 50%;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+  }
+}
+
+section.section_recruit .card_content {
   margin: 20px 0;
   padding: 20px 15px;
   border-radius: 4px;
@@ -260,40 +338,47 @@ section.section_news .card_news_content {
 }
 
 @media (min-width: 768px) {
-  section.section_news .card_news_content {
+  section.section_recruit .card_content {
     margin: 35px 0;
     padding: 50px 60px;
   }
 }
 
 @media (min-width: 992px) {
-  section.section_news .card_news_content {
+  section.section_recruit .card_content {
     margin: 35px 0;
     padding: 50px 60px;
   }
 }
 
-section.section_news .card_news_content p {
+section.section_recruit .card_content p {
   margin: 0 0 1rem;
   text-align: justify;
-  font-size: 16px;
-  line-height: 26px;
 }
 
 @media (min-width: 992px) {
-  section.section_news .card_news_content p {
-    font-size: 18px;
+  section.section_recruit .card_content p {
     margin: 0 0 28px;
-    line-height: 30px;
   }
 }
 
-section.section_news .card_news_content p span {
+section.section_recruit .card_content p span {
   color: #0088cc;
 }
 
-section.section_news .card_news_content p:last-child {
+section.section_recruit .card_content p:last-child {
   margin: 0 0 0;
+}
+
+section.section_recruit .card_content p b {
+  color: #003158;
+}
+
+section.section_recruit .card_content p.text-center {
+  padding: 5px;
+  background: #cdf1f2;
+  font-weight: 500;
+  color: #003158;
 }
 
 footer.footer {
@@ -305,7 +390,6 @@ footer.footer {
 footer.footer h4 {
   position: relative;
   font-size: 16px;
-  font-weight: 700;
+  font-weight: 400;
   color: #fff;
 }
-/*# sourceMappingURL=style.css.map */
